--- a/src/html/static/running.tmpl.html
+++ b/src/html/static/running.tmpl.html
@@ -12,7 +12,7 @@
                         In the case of this sample, we're using the <a href="https://www.npmjs.org/package/http-server">http-server</a> NodeJS module configured in package.json.
                     </p>
                     <pre>
-npm start
+http-server -p 8080
                     </pre>
                     <p>
                         For mocking JSON requests, we'll use the <a href="https://www.npmjs.org/package/json-server">json-server</a> NodeJS module. The initial set of mocks can be found in api/mocks.json.
