--- a/src/html/menu.tmpl.html
+++ b/src/html/menu.tmpl.html
@@ -32,7 +32,7 @@
                         <li><a href="#/page/static/frontEndServices">Services</a></li>
                     </ul>
                 </li>
-                <li><a href="#/page/books?api=http:%2F%2Flocalhost:8081">Books</a></li>
+                <li><a href="#/page/books?mocksPort=8081">Books</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Themes <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
