--- a/src/html/static/running.tmpl.html
+++ b/src/html/static/running.tmpl.html
@@ -8,6 +8,12 @@
             <div>
                 <div class="list-group">
                     <p>
+                        Before running the application we need to minify and concatenate our JS files.
+                    </p>
+                    <pre>
+gulp js
+                    </pre>
+                    <p>
                         To run the application in development mode we need to start the server.
                         In the case of this sample, we're using the <a href="https://www.npmjs.org/package/http-server">http-server</a> NodeJS module configured in package.json.
                     </p>
