--- a/src/html/static/running.tmpl.html
+++ b/src/html/static/running.tmpl.html
@@ -15,10 +15,10 @@ gulp js
                     </pre>
                     <p>
                         To run the application in development mode we need to start the server.
-                        In the case of this sample, we're using the <a href="https://www.npmjs.org/package/http-server">http-server</a> NodeJS module configured in package.json.
+                        In the case of this sample, we're using the <a href="http://expressjs.com/">Express</a> NodeJS module configured in package.json.
                     </p>
                     <pre>
-http-server -p 8080
+npm start
                     </pre>
                     <p>
                         For mocking JSON requests, we'll use the <a href="https://www.npmjs.org/package/json-server">json-server</a> NodeJS module. The initial set of mocks can be found in api/mocks.json.
