Added json-server warning message.

--- a/src/html/books/books.tmpl.html
+++ b/src/html/books/books.tmpl.html
@@ -7,6 +7,7 @@
         </p>
         <p>
             This screen will not work on Heroku due to limitations to use additional port required by json-server.
+            If you opened this application from <a href="http://angular-web-ui-sample.herokuapp.com/">http://angular-web-ui-sample.herokuapp.com/</a>, then you are seeing it from Heroku and, therefore, won't be able to see it in action.
             Please run the application locally using instructions from the <a href="#/page/static/running">Development: Running</a> screen.
         </p>
     </div>
