--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="mainModule" ng-controller="mainCtrl" id="ng-app">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title ng-bind="title">My Application</title>
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/angular/angular.min.js"></script>
