Added mobile meta

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="mainModule" ng-controller="mainCtrl" id="ng-app">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title ng-bind="title">My Application</title>
+    <title ng-bind="title">Angular Web UI Sample</title>
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/angular/angular.min.js"></script>
     <script src="/bower_components/angular-route/angular-route.min.js"></script>
