--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="/bower_components/ng-table/ng-table.min.js"></script>
     <script src="/src/app.js"></script>
+    <link ng-href="/src/styles/bootstrap-responsive.css" rel="stylesheet">
     <link ng-href="/src/styles/{{theme}}" rel="stylesheet">
 </head>
 <body class="skin-blue">
