--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link ng-href="/src/styles/{{theme}}" rel="stylesheet">
 </head>
 <body class="skin-blue">
-<ng-include src="'/src/html/menu.tmpl.html'"></ng-include>
+<ng-include src="'/src/html/replaced/menu.tmpl.html'"></ng-include>
 <div ng-view>
 </div>
 </body>
