Started writing BDD stories

--- a/src/html/menu.tmpl.html
+++ b/src/html/menu.tmpl.html
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <!-- build:menu -->
-                <li><a href="#/page/books?mocksPort=8081">Books</a></li>
+                <li><a id="books" href="#/page/books?mocksPort=8081">Books</a></li>
                 <!-- endbuild -->
             </ul>
         </div>
