--- a/src/html/books/books.tmpl.html
+++ b/src/html/books/books.tmpl.html
@@ -1,6 +1,7 @@
 <div class="container-fluid" ng-controller="booksCtrl">
     <div class="row">
         <div class="col-md-4">
+            <h2 id="title">Books</h2>
             <table id="books" ng-table="tableParams" class="table table-condensed table-striped table-hover ng-table-responsive">
                 <thead>
                 <tr>
@@ -13,7 +14,7 @@
                 <tbody ng-repeat="book in $data">
                 <tr>
                     <td>
-                        <a id="books{{$index + 1}}" href="" ng-click="openBook(book.id)">{{book.title}}</a>
+                        <a id="book{{book.id}}" href="" ng-click="openBook(book.id)">{{book.title}}</a>
                     </td>
                 </tr>
                 </tbody>
