--- a/src/html/books/books.tmpl.html
+++ b/src/html/books/books.tmpl.html
@@ -15,7 +15,7 @@
                 <tbody ng-repeat="book in $data">
                 <tr>
                     <td colspan="2">
-                        <a id="book{{book.id}}" href="" ng-click="openBook(book.id)">{{book.title}}</a>
+                        <a id="book{{book._id}}" href="" ng-click="openBook(book._id)">{{book.title}}</a>
                     </td>
                 </tr>
                 </tbody>
@@ -25,7 +25,7 @@
             <form class="form-horizontal" role="form" id="bookForm" name="bookForm" novalidate="novalidate">
                 <div class="form-group" ng-class="cssClass(bookForm.bookId)">
                     <label for="bookId">ID</label>
-                    <input id="bookId" name="bookId" class="form-control" type="number" ng-model="book.id" placeholder="Book ID" required="true">
+                    <input id="bookId" name="bookId" class="form-control" type="number" ng-model="book._id" placeholder="Book ID" required="true">
                 </div>
                 <div class="form-group" ng-class="cssClass(bookForm.title)">
                     <label for="bookTitle">Title</label>
